create header of website.

--- a/Homepage.html
+++ b/Homepage.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    
+    <div class ="container1">
+        <img src="images/image_processing20220908-138-bacjph.jpg">
+        <div class ="text"><br class ="subtext">Edgar Wright is an english director born on April 18th 1974. He attended The Blue Schools Wells from 1985 to 1992.</br>
+        <br class = "subtext">He has said the movies that inspired him to be a director were An American Werewolf in London, Evil Dead 2, and Raising Arizona.</br> </div>
+    </div>
 </body>
 </html>
