Create advertising line for next movie poster. Create flexbox containers.

--- a/Homepage.html
+++ b/Homepage.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     <div class ="container1">
-        <div class= "image"><img src="images/image_processing20220908-138-bacjph.jpg"height="400"></div>
+        <div class= "image"><img src="images/image_processing20220908-138-bacjph.jpg"width="600"></div>
         <div class ="text"><br class ="subtext">Edgar Wright is an english director born on April 18th 1974. He attended The Blue Schools Wells from 1985 to 1992.</br>
         <br class = "subtext">He has said the movies that inspired him to be a director were An American Werewolf in London, Evil Dead 2, and Raising Arizona.</br> </div>
+    </div>
+    <div class ="container2">
+        <div class ="image"><img src ="images/FistfulOfFingers20poster.jpeg"></div>
+        <div class ="text"><br class ="subtext">Edgar Wright's first feature film debut "A Fist Full of Fingers" was released in 1995! 
+            It was released on a budget of $15,000 and was well received by critics.</div>
     </div>
 </body>
 </html>
