--- a/Homepage.html
+++ b/Homepage.html
@@ -17,5 +17,9 @@
         <div class ="text"><br class ="subtext">Edgar Wright's first feature film debut "A Fist Full of Fingers" was released in 1995! 
             It was released on a budget of $15,000 and was well received by critics.</div>
     </div>
+    <div class ="container3">
+        <div class = "poster1"><img src = "images/Shaun_Of_The_Dead.jpg" width ="600"></div>
+        <div class ="subheader2"><h2>Shaun of The Dead</h2></div>
+    </div>
 </body>
 </html>
