--- a/Homepage.html
+++ b/Homepage.html
@@ -18,8 +18,9 @@
             It was released on a budget of $15,000 and was well received by critics.</div>
     </div>
     <div class ="container3">
-        <div class = "poster1"><img src = "images/Shaun_Of_The_Dead.jpg" width ="600"></div>
-        <div class ="subheader2"><h2>Shaun of The Dead</h2></div>
+        <div class = "poster1"><img src = "images/Shaun_Of_The_Dead.jpg" width ="600" height="600">
+        <div class ="subtext2"><h2>Shaun of The Dead</h2></div>
+    </div>
     </div>
 </body>
 </html>
