Add title to third section of website and style it.

--- a/Homepage.html
+++ b/Homepage.html
@@ -17,6 +17,7 @@
         <div class ="text"><br class ="subtext">Edgar Wright's first feature film debut "A Fist Full of Fingers" was released in 1995! 
             It was released on a budget of $15,000 and was well received by critics.</div>
     </div>
+    <div class ="title"><h1>The Cornetto Trilogy!</h1></div>
     <div class ="container3">
         <div class = "poster1"><img src = "images/Shaun_Of_The_Dead.jpg" width ="600" height="600">
         <div class ="subtext2"><h2>Shaun of The Dead</h2></div>
