add description and continaers for dead to rights film.

--- a/Homepage.html
+++ b/Homepage.html
@@ -12,6 +12,8 @@
         <div class ="text"><br class ="subtext">Edgar Wright is an english director born on April 18th 1974. He attended The Blue Schools Wells from 1985 to 1992.</br>
         <br class = "subtext">He has said the movies that inspired him to be a director were An American Werewolf in London, Evil Dead 2, and Raising Arizona.</br> </div>
     </div>
+    <div class ="Dead_to_rights"><br class = "subtext">Edgar Wright's first film that was named "Dead Right", a parody of the working title for Die Hard.<br>
+    <br>It was mostly filmed in his hometown during his time off between semesters in school. He wrote, directed, and acted in this short film.</br></div>
     <div class ="container2">
         <div class ="image"><img src ="images/FistfulOfFingers20poster.jpeg"></div>
         <div class ="text"><br class ="subtext">Edgar Wright's first feature film debut "A Fist Full of Fingers" was released in 1995! 
