--- a/Homepage.html
+++ b/Homepage.html
@@ -9,11 +9,11 @@
 <body>
     <div class ="container1">
        
-        <div class ="text"><br class ="subtext">Edgar Wright is an english director born on April 18th 1974. He attended The Blue Schools Wells from 1985 to 1992.</br>
-        <br class = "subtext">He has said the movies that inspired him to be a director were An American Werewolf in London, Evil Dead 2, and Raising Arizona.</br> </div>
+        <div class ="text"><br>Edgar Wright is an english director born on April 18th 1974. He attended The Blue Schools Wells from 1985 to 1992.</br>
+        <br>He has said the movies that inspired him to be a director were An American Werewolf in London, Evil Dead 2, and Raising Arizona.</br> </div>
     </div>
-    <div class ="Dead_right"><br class = "subtext">Edgar Wright's first film that was named "Dead Right", a parody of the working title for Die Hard.<br>
-    <br>It was mostly filmed in his hometown during his time off between semesters in school. He wrote, directed, and acted in this short film.</br></div>
+    <div class ="Dead_right"><div class = "subtext2">Edgar Wright's first film that was named "Dead Right", a parody of the working title for Die Hard.
+    It was mostly filmed in his hometown during his time off between semesters in school. He wrote, directed, and acted in this short film.</div>
     <div class ="container2">
         <div class ="image"><img src ="images/FistfulOfFingers20poster.jpeg"></div>
         <div class ="text"><br class ="subtext">Edgar Wright's first feature film debut "A Fist Full of Fingers" was released in 1995! 
@@ -22,7 +22,7 @@
     <div class ="title"><h1>The Cornetto Trilogy!</h1></div>
     <div class ="container3">
         <div class = "poster1"><img src = "images/Shaun_Of_The_Dead.jpg" width ="600" height="600">
-        <div class ="subtext2"><h2>Shaun of The Dead</h2></div>
+        <div class ="subtext"><h2>Shaun of The Dead</h2></div>
         
     </div>
     </div>
