--- a/Homepage.html
+++ b/Homepage.html
@@ -13,7 +13,7 @@
         <br>He has said the movies that inspired him to be a director were An American Werewolf in London, Evil Dead 2, and Raising Arizona.</br> </div>
     </div>
     <div class ="Dead_right"><div class = "subtext2">Edgar Wright's first film that was named "Dead Right", a parody of the working title for Die Hard.
-    It was mostly filmed in his hometown during his time off between semesters in school. He wrote, directed, and acted in this short film.</div>
+    It was mostly filmed in his hometown during his time off between semesters in school. He wrote, directed, and acted in this short film.</div></div>
     <div class ="container2">
         <div class ="image"><img src ="images/FistfulOfFingers20poster.jpeg"></div>
         <div class ="text"><br class ="subtext">Edgar Wright's first feature film debut "A Fist Full of Fingers" was released in 1995! 
