--- a/Homepage.html
+++ b/Homepage.html
@@ -12,7 +12,7 @@
         <div class ="text"><br>Edgar Wright is an english director born on April 18th 1974. He attended The Blue Schools Wells from 1985 to 1992.</br>
         <br>He has said the movies that inspired him to be a director were An American Werewolf in London, Evil Dead 2, and Raising Arizona.</br> </div>
     </div>
-    <div class ="Dead_right"><div class = "subtext2">Edgar Wright's first film that was named "Dead Right", a parody of the working title for Die Hard.
+    <div class ="Dead_right"><div class = "poster3" img src ="images/dead-right.jpg"></div><div class = "subtext2">Edgar Wright's first film that was named "Dead Right", a parody of the working title for Die Hard.
     It was mostly filmed in his hometown during his time off between semesters in school. He wrote, directed, and acted in this short film.</div></div>
     <div class ="container2">
         <div class ="image"><img src ="images/FistfulOfFingers20poster.jpeg"></div>
