changed styling of middle two rows.

--- a/Homepage.html
+++ b/Homepage.html
@@ -16,7 +16,7 @@
     It was mostly filmed in his hometown during his time off between semesters in school. He wrote, directed, and acted in this short film.</div></div>
     <div class ="container2">
         <div class ="image"><img src ="images/FistfulOfFingers20poster.jpeg"></div>
-        <div class ="text"><br class ="subtext">Edgar Wright's first feature film debut "A Fist Full of Fingers" was released in 1995! 
+        <div class ="text2">Edgar Wright's first feature film debut "A Fist Full of Fingers" was released in 1995! 
             It was released on a budget of $15,000 and was well received by critics.</div>
     </div>
     <div class ="title"><h1>The Cornetto Trilogy!</h1></div>
